<resources>
    <string name="app_name">泊车收费</string>
    <string name="pro_name">粤</string>
    <string name="city_first_letter">A</string>
    <string name="loading">加载中&#8230;</string>
    <string name="processed">处理中</string>
    <string name="processed_fail">处理失败，请联系后台人员</string>
    <string name="ok">确定</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="commit">提交</string>
    <string name="clear">清除</string>
    <string name="back">返回</string>
    <string name="no_car_plate">无车牌</string>
    <string name="car_num_can_not_be_null">车牌号不能为空</string>
    <string name="car_num_not_right">车牌号格式不对</string>
    <string name="default_no_value">--</string>
    <string name="loading_data">正在获取数据，请稍候</string>
    <string name="loading_error_and_retry">订单数据获取失败，请重试</string>
    <string name="common_get_fail">页面加载失败，点击页面重试</string>
    <string name="common_get_fail_2">页面加载失败</string>
    <string name="common_none_more_data">没有更多数据啦！</string>
    <string name="common_no_network_new">网络出错</string>
    <string name="common_system_error">系统异常</string>
    <string name="search_order_null">未找到停车订单</string>
    <string name="owner_had_pay">此订单车主已进行自主缴费</string>
    <string name="check_user_expire">检测到您的账号已在另一台设备上登录。</string>
    <string name="relogin">重新登录</string>
    <string name="pay_money_is_error">补缴金额有误</string>
    <string name="service_search_data_none">未查询到数据</string>
    <string name="order_none_existent">订单不存在</string>
    <string name="pay_fail_tip">结算错误，请稍后再试。</string>
    <string name="had_find_new_version">已检测到新版本</string>
    <string name="update_now">马上更新</string>
    <string name="city_parking">智慧停车</string>
    <string name="pda_parking_terminal">路 边 停 车 收 费 终 端</string>
    <string name="please_enter_account">请输入账户</string>
    <string name="please_enter_pw">请输入密码</string>
    <string name="login_user_name_not_null">用户名不能为空</string>
    <string name="login_user_name_not_special_char">用户名不能包含特殊字符</string>
    <string name="login_pw_not_null">密码不能为空</string>
    <string name="login">登 录</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="login_version_name">V %1$s</string>
    <string name="home_capital_manager_title">资金管理</string>
    <string name="home_arrears_manager_title">欠费管理</string>
    <string name="home_berth_park">停车缴费</string>
    <string name="home_day_charge">当日缴费</string>
    <string name="home_change_psw">修改密码</string>
    <string name="home_check">下班签出</string>
    <string name="home_amount_charge">账户充值</string>
    <string name="fun_balance_inquiry">账户查询</string>
    <string name="home_print_ticket">重印小票</string>
    <string name="exit_app">是否退出应用？</string>
    <string name="charge_success">缴费成功</string>
    <string name="charge_money">充值金额</string>
    <string name="charge_info">是否为账户"XXXX"充值</string>
    <string name="other_money">其他金额</string>
    <string name="account_charge_success">充值成功!</string>
    <string name="input_money">请选择或输入金额</string>
    <string name="input_money_too_low">单次最多充值500元</string>
    <string name="digits">0123456789</string>
    <string name="input_other_money">请输入其他金额</string>
    <string name="take_pic_again">重拍</string>
    <string name="sign_in">上班签到</string>
    <string name="sign_out">下班签出</string>
    <string name="sign_in_take_pic">签到拍照</string>
    <string name="sign_out_take_pic">签出拍照</string>
    <string name="request_address_again">重新获取</string>
    <string name="get_location_address_fail">获取位置信息失败</string>
    <string name="sign_out_success">签出成功</string>
    <string name="sign_in_success">签到成功</string>
    <string name="sign_in_now">正在签到&#8230;</string>
    <string name="had_not_sign_please_relogin">尚未签到，请重新登录。</string>
    <string name="not_sign">未签到</string>
    <string name="sign_in_section_code_default">选择路段</string>
    <string name="sign_in_section_code_select_hint">请选择路段</string>
    <string name="sign_in_section_id_default">选择岗位</string>
    <string name="sign_in_section_id_select_hint">请选择岗位</string>
    <string name="section_select_num">已选择（岗位：%1$d）</string>
    <string name="section_select_num_defalut">已选择（岗位：0）</string>
    <string name="berth_data_not_new_refresh">泊位数据不是最新，点此重试刷新</string>
    <string name="berth_type_all">全部</string>
    <string name="berth_type_empty">空闲</string>
    <string name="berth_type_wait_apply">待申请</string>
    <string name="berth_type_not_apply">未申请</string>
    <string name="berth_type_normal">已申请</string>
    <string name="berth_normal_channel_type_app">手机APP</string>
    <string name="berth_normal_channel_type_ivr">电话语音</string>
    <string name="berth_normal_channel_type_rfid">电子标签</string>
    <string name="berth_normal_channel_type_webchat">微信公众号</string>
    <string name="berth_normal_channel_type_alipay">支付宝服务窗</string>
    <string name="berth_type_over_time">超时</string>
    <string name="berth_type_free">免费</string>
    <string name="reserved">已预约</string>
    <string name="berth_trouble">故障泊位</string>
    <string name="berth_search_order_by_car_plate_hint">请输入车牌</string>
    <string name="arrears_bt">欠费管理</string>
    <string name="over_time_gone">超时驶离</string>
    <string name="arrears_no_data_toast">没有欠费订单</string>
    <string name="arrears_no_select_toast">没有选中欠费单</string>
    <string name="enter_car_num_to_search">输入车牌号查询</string>
    <string name="enter_berth_code_to_search">输入泊位号查询</string>
    <string name="berth_search">搜索</string>
    <string name="berth_empty"/>
    <string name="no_arrears_record">暂无待缴费记录哦</string>
    <string name="no_arrears_multi_record">暂无多次欠费车辆停车哦</string>
    <string name="berth_arrears_in">入</string>
    <string name="berth_arrears_out">出</string>
    <string name="arrears_confirm">确定补缴</string>
    <string name="choose_all_default">全选</string>
    <string name="choose_all">全选</string>
    <string name="settlement">结算</string>
    <string name="search_total_tip">车牌\"%1$s\"共搜索到%2$d条欠费记录</string>
    <string name="berth_park_num">泊&#160;&#160;位&#160;&#160;号：</string>
    <string name="card_num">车&#160;&#160;牌&#160;&#160;号：</string>
    <string name="section_name">路段名称：</string>
    <string name="berth_park_in_time">驶入时间：</string>
    <string name="berth_park_start_time">入场时间：</string>
    <string name="berth_park_time">已停时长：</string>
    <string name="berth_take_photo">拍照</string>
    <string name="berth_card_size">车辆类型：</string>
    <string name="berth_amount">缴费金额：</string>
    <string name="berth_card_size_1">小型车</string>
    <string name="berth_card_size_2">大型车</string>
    <string name="berth_plate_num_color">车牌颜色：</string>
    <string name="berth_apply">提交申请</string>
    <string name="berth_apply_park">申请停车</string>
    <string name="tips">提示</string>
    <string name="please_commit_a_pic">请上传一张照片</string>
    <string name="please_commit_pic">请上传照片</string>
    <string name="confirm_car_escape">你确认该车辆已经逃逸了吗?</string>
    <string name="confirm_car_leave">你确认该车辆已经驶离了吗?</string>
    <string name="berth_take_photo_tip_1">车牌识别：</string>
    <string name="berth_take_photo_tip_2">泊位+车牌：</string>
    <string name="berth_take_photo_tip_3">背景参考：</string>
    <string name="car_type_normal">普通</string>
    <string name="car_type_new_energy">新能源</string>
    <string name="berth_lpr">识别车牌</string>
    <string name="berth_update_car_tip">温馨提示：</string>
    <string name="berth_update_car_message">请输入正确的车牌</string>
    <string name="berth_take_photo_obtain_evidence_title">拍照取证</string>
    <string name="commit_success">提交成功！</string>
    <string name="take_pic">拍照</string>
    <string name="open_flash_mode">打开闪光灯</string>
    <string name="fail_take_photo">您的手机无法拍照</string>
    <string name="lpr_tip">请将车牌放入扫描框中开始识别</string>
    <string name="settlement_slip">结算凭条</string>
    <string name="close_page">关闭页面</string>
    <string name="print">打印</string>
    <string name="order_company">管理单位：&#160;&#160;&#160;%1$s</string>
    <string name="order_company_default"><![CDATA[管理单位：   —]]></string>
    <string name="order_car_plate">车&#160;&#160;牌&#160;&#160;号：&#160;&#160;&#160;%1$s</string>
    <string name="order_car_plate_default"><![CDATA[车  牌  号：   —]]></string>
    <string name="order_berth_code">泊&#160;&#160;位&#160;&#160;号：&#160;&#160;&#160;%1$s</string>
    <string name="order_berth_code_default"><![CDATA[泊  位  号：   —]]></string>
    <string name="order_section">停车路段：&#160;&#160;&#160;%1$s</string>
    <string name="order_section_default"><![CDATA[停车路段：   —]]></string>
    <string name="order_car_type">车辆类型：&#160;&#160;&#160;%1$s</string>
    <string name="order_car_type_default"><![CDATA[车辆类型：   —]]></string>
    <string name="order_user">收&#160;&#160;费&#160;&#160;员：&#160;&#160;&#160;%1$s</string>
    <string name="order_user_default"><![CDATA[收  费  员：   —]]></string>
    <string name="order_user_tel">管理员电话：&#160;&#160;&#160;%1$s</string>
    <string name="order_user_tel_default"><![CDATA[管理员电话：   —]]></string>
    <string name="order_start_time">驶入时间：&#160;&#160;&#160;%1$s</string>
    <string name="order_start_time_default"><![CDATA[驶入时间：   —]]></string>
    <string name="order_end_time">驶离时间：&#160;&#160;&#160;%1$s</string>
    <string name="order_end_time_default"><![CDATA[驶离时间：   —]]></string>
    <string name="order_car_color">车牌颜色：&#160;&#160;&#160;%1$s</string>
    <string name="order_car_color_default"><![CDATA[车牌颜色：   —]]></string>
    <string name="title_print">打印凭条</string>
    <string name="order_tips">温馨提示：%1$s</string>
    <string name="order_pay_and_print">结算并打印</string>
    <string name="order_pay">结算</string>
    <string name="order_free_exit">免费驶出</string>
    <string name="print_again">重新打印</string>
    <string name="order_time_long">停车时长：&#160;&#160;&#160;%1$s</string>
    <string name="order_time_long_default"><![CDATA[停车时长：   —]]></string>
    <string name="order_pay_money">缴费金额：&#160;&#160;&#160;%1$s元</string>
    <string name="order_pay_money_default"><![CDATA[缴费金额：   —]]></string>
    <string name="confirm_escape">确认逃逸</string>
    <string name="arrear_money">欠费金额:</string>
    <string name="pay_now">立即补缴</string>
    <string name="arrears_count">欠费总笔数：&#160;&#160;&#160;%1$s笔</string>
    <string name="arrears_count_default"><![CDATA[欠费总笔数：   —]]></string>
    <string name="arrears_money">欠费总金额：&#160;&#160;&#160;%1$s元</string>
    <string name="arrears_money_default"><![CDATA[欠费总金额：   —]]></string>
    <string name="back_num">补缴笔数：&#160;&#160;&#160;%1$s笔</string>
    <string name="back_num_default"><![CDATA[补缴笔数：   —]]></string>
    <string name="back_money">补缴金额：&#160;&#160;&#160;%1$s元</string>
    <string name="back_money_default"><![CDATA[补缴金额：   —]]></string>
    <string name="order_arrears">补缴</string>
    <string name="pre_pay_default"><![CDATA[预收金额：   —]]></string>
    <string name="pre_pay">预收金额：&#160;&#160;&#160;%1$s元</string>
    <string name="actual_pay_default"><![CDATA[实收金额：   —]]></string>
    <string name="actual_pay">实收金额：&#160;&#160;&#160;%1$s元</string>
    <string name="arrears_default"><![CDATA[欠费金额：   —]]></string>
    <string name="arrears_pay">欠费金额：&#160;&#160;&#160;%1$s元</string>
    <string name="reback_default"><![CDATA[退费金额：   —]]></string>
    <string name="reback">退费金额：&#160;&#160;&#160;%1$s元</string>
    <string name="card_balance">余      额：&#160;&#160;&#160;%1$s元</string>
    <string name="card_balance_default"><![CDATA[余      额：   —]]></string>
    <string name="pay_type">支付方式：&#160;&#160;&#160;%1$s</string>
    <string name="pay_type_default"><![CDATA[支付方式：   —]]></string>
    <string name="order_finish_is_print">订单结算成功，是否打印小票？</string>
    <string name="order_finish">订单结算成功</string>
    <string name="berth_price">所需金额：</string>
    <string name="settlement_title_confirm_tip">智慧路边停车收费结算预览</string>
    <string name="settlement_should_pay">应收金额：&#160;&#160;&#160;%1$s元</string>
    <string name="settlement_should_pay_default"><![CDATA[应收金额：   —]]></string>
    <string name="push_list_title">消息</string>
</resources>