<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/custom_layout"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="280dp"
              android:layout_height="wrap_content"
              android:background="@drawable/pub_dialog_background"
              android:orientation="vertical">


    <TextView
        android:id="@+id/msg_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/had_find_new_version"
        android:textColor="@color/text_deep_gray"
        android:textSize="@dimen/text_20_dimens"/>


    <View
        android:id="@+id/update_line2"
        style="@style/horizontal_line_style"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/left_bt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_dialog_bg_left_bottom"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:text="@string/cancel"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_16_dimens"/>

        <View
            android:id="@+id/view_line"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/line_color"/>

        <TextView
            android:id="@+id/right_bt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_dialog_bg_right_bottom"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:text="@string/update_now"
            android:textColor="@color/main_theme"
            android:textSize="@dimen/text_16_dimens"/>

    </LinearLayout>

</LinearLayout>