<?xml version="1.0" encoding="utf-8"?>
<!-- 订单列表顶部搜索框View -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_above="@+id/rl_bottom"
              android:background="@color/white"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tip_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/enter_car_num_to_search"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_16_dimens"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pro_choose_tv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/berth_rec_gray_line"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20_dimens"/>

        <EditText
            android:id="@+id/car_num_et"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/berth_rec_gray_line"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20_dimens"/>

        <Button
            android:id="@+id/clear_bt"
            style="@style/submit_grey_button_style"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginRight="2dp"
            android:text="@string/clear"
            android:textSize="@dimen/text_20_dimens"
            android:visibility="gone"/>

        <Button
            android:id="@+id/search_bt"
            style="@style/submit_button_style"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/berth_search"
            android:textSize="@dimen/text_20_dimens"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_search_total_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_16_dimens"
        android:visibility="gone"/>

    <View
        android:id="@+id/line"
        style="@style/horizontal_line_style"/>

</LinearLayout>


