<?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar
    android:id="@+id/pub_tb"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:minHeight="?attr/actionBarSize"
    android:background="@color/main_theme">

    <!-- 由于合肥PDA的硬件的确定按钮需要屏蔽掉,需要这里加一个输入框来获取焦点来拦截这个确定按钮的点击事件 -->
    <EditText
        android:id="@+id/et_focusable"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:background="@color/transparent"
        android:focusable="true"/>
    <!-- =========================================================================================== -->

    <TextView
        android:id="@+id/pub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="false"
        android:textSize="@dimen/text_20_dimens"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/berth_monitor_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/berth_monitor_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:maxLength="9"
            android:ellipsize="end"
            android:textSize="@dimen/text_20_dimens"
            android:textColor="@color/white"/>

        <CheckBox
            android:id="@+id/berth_monitor_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/berth_title_ic"
            android:clickable="false"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="end"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/right_bt_tv"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/common_btn_selector_no_solid_stroke_circle"
            android:text="@string/over_time_gone"
            android:textColor="@color/main_theme"
            android:textSize="@dimen/text_16_dimens"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_centerVertical="true"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/red_point"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_alignRight="@+id/right_bt_tv"
            android:layout_marginLeft="-3dp"
            android:gravity="center"
            android:textSize="8sp"
            android:textColor="@color/white"
            android:background="@drawable/pub_red_point"
            android:visibility="gone"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/right_bt_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@mipmap/pay_slip_ic_photos"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:contentDescription="@string/app_name"
        />

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/toolbar_right_tx_red"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="end"
        android:layout_marginRight="0dp">

        <TextView
            android:id="@+id/right_push_info"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/push_list_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16_dimens"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_centerVertical="true"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/right_push_info_red_point"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_alignRight="@+id/right_push_info"
            android:layout_marginLeft="-3dp"
            android:gravity="center"
            android:textSize="8sp"
            android:text="1"
            android:textColor="@color/white"
            android:background="@drawable/pub_red_point"
            android:visibility="visible"/>

    </RelativeLayout>


</android.support.v7.widget.Toolbar>
